feat: add proxy and fix responses structures